fixed product options, added missing colors for divs

--- a/src/pages/ProductPage/ProductPage.scss
+++ b/src/pages/ProductPage/ProductPage.scss
@@ -243,7 +243,7 @@
     &--coral {
       background-color: lightcoral;
     }
-    &--rosegold {
+    &--rose-gold {
       background-color: #f7c5ad;
     }
     &--midnight {
@@ -267,7 +267,7 @@
     &--space-gray {
       background-color: darkgray;
     }
-    &--sky-sbue {
+    &--sky-blue {
       background-color: lightblue;
     }
     &--starlight {
